fix modal body overflow

--- a/src/scss/modal.scss
+++ b/src/scss/modal.scss
@@ -47,6 +47,8 @@
 .modal-body {
     flex-grow: 1;
     padding: 0.5rem 1rem;
+    max-height: 80vh;
+    overflow: auto;
 }
 
 .modal-footer {
